Collect type selector rules case-sensitively in UA sheets.

Selectors in UA sheets are added case-sensitively to RuleSet buckets as
if they were sheets in non-HTML documents in order to match correctly
for xhtml and svg documents. That means we should not use the lower-case
element name to lookup element rules as the lower-case of foreignObject
would not find the foreignObject rules from the element bucket in the
svg.css UA stylesheet.

Bug: 819814
Change-Id: I2064f6669f6b7021feab2c93dd6b4d8a5c749b77
Reviewed-on: https://chromium-review.googlesource.com/c/1290849
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601116}
Former-commit-id: ac2d95815375fcd6e70c6c491c4bdbda25b181b8