third_party/blink/renderer/core/css/element_rule_collector.cc
@@ -235,9 +235,11 @@ void ElementRuleCollector::CollectMatchingRules(
   if (SelectorChecker::MatchesFocusPseudoClass(element))
     CollectMatchingRulesForList(match_request.rule_set->FocusPseudoClassRules(),
                                 cascade_order, match_request);
-  CollectMatchingRulesForList(
-      match_request.rule_set->TagRules(element.LocalNameForSelectorMatching()),
-      cascade_order, match_request);
+  AtomicString element_name = matching_ua_rules_
+                                  ? element.localName()
+                                  : element.LocalNameForSelectorMatching();
+  CollectMatchingRulesForList(match_request.rule_set->TagRules(element_name),
+                              cascade_order, match_request);
   CollectMatchingRulesForList(match_request.rule_set->UniversalRules(),
                               cascade_order, match_request);
 }
