third_party/blink/renderer/core/layout/svg/layout_svg_foreign_object_test.cc
@@ -166,7 +166,7 @@ TEST_F(LayoutSVGForeignObjectTest, HitTestZoomedForeignObject) {
   SetBodyInnerHTML(R"HTML(
     <style>* { margin: 0; zoom: 150% }</style>
     <svg id='svg' style='width: 200px; height: 200px'>
-      <foreignObject id='foreign' x='10' y='10' width='100' height='150'>
+      <foreignObject id='foreign' x='10' y='10' width='100' height='150' style='overflow: visible'>
         <div id='div' style='margin: 50px; width: 50px; height: 50px'>
         </div>
       </foreignObject>
